--- a/src/MTRPZ4.UI/Views/Shared/_FooterMeta.cshtml
+++ b/src/MTRPZ4.UI/Views/Shared/_FooterMeta.cshtml
@@ -2,7 +2,7 @@
 	<div class="footer__copy">© 2024 - МТРПЗ - Privacy</div>
 	<ul class="footer__add-links">
 		<li>
-			<a href="#" aria-label="GitHub">
+			<a href="https://github.com/DreammyOleksandr/MTRPZ4" aria-label="GitHub">
 				<svg width="98" height="96">
 					<image href="/Materials/Git.png" x="0" y="0" height="40" width="40"></image>
 				</svg>
